@@ -7,6 +7,7 @@ export(computeCumulativeCICorrelation)
 export(generateCI)
 export(generateCI2IFC)
 export(generateCINoise)
+export(generateGabor)
 export(generateNoiseImage)
 export(generateNoisePattern)
 export(generateSinusoid)
@@ -16,6 +17,7 @@ import(aspace)
 import(dplyr)
 import(jpeg)
 import(matlab)
+import(scales)
 importFrom(graphics,boxplot)
 importFrom(stats,aggregate)
 importFrom(stats,cor)
