@@ -4,7 +4,7 @@
 \alias{generateCINoise}
 \title{Generate classification image noise pattern based on set of stimuli (matrix: trials, parameters), responses (vector), and sinusoid}
 \usage{
-generateCINoise(stimuli, responses, s)
+generateCINoise(stimuli, responses, p)
 }
 \arguments{
 \item{stimuli}{Matrix with one row per trial, each row containing the 4092 parameters for the original stimulus}
@@ -12,7 +12,7 @@ generateCINoise(stimuli, responses, s)
 \item{responses}{Vector containing the response to each trial (1 if participant selected original , -1 if participant selected inverted;
 this can be changed into a scale)}
 
-\item{s}{3D sinusoid matrix (generated using \code{generateNoisePattern()})}
+\item{p}{3D patch matrix (generated using \code{generateNoisePattern()})}
 }
 \value{
 The classification image as pixel matrix
