@@ -1,0 +1,31 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/rcicr.R
+\name{generateGabor}
+\alias{generateGabor}
+\title{Generate single gabor patch}
+\usage{
+generateGabor(img_size, cycles, angle, phase, sigma, contrast)
+}
+\arguments{
+\item{img_size}{Integer specifying size of gabor patch in number of pixels}
+
+\item{cycles}{Integer specifying number of cycles the sinusoid should span}
+
+\item{angle}{Value specifying the angle (rotation) of the sinusoid}
+
+\item{phase}{Value specifying phase of sinusoid}
+
+\item{sigma}{of guassian mask on top of sinusoid}
+
+\item{contrast}{Value between -1.0 and 1.0 specifying contrast of sinusoid}
+}
+\value{
+The sinusoid image with size \code{img_size}.
+}
+\description{
+Generate single gabor patch
+}
+\examples{
+generateSinusoid(512, 2, 90, pi/2, 1.0)
+}
+
