@@ -1,3 +1,10 @@
+Changes from 0.3.2-39 to 0.3.3-40 [4-Apr-2016]
+
+* Added Gabor noise option. Generate stimuli with generateStimuli2IFC(..., noise_type='gabor'). Almost all functions have been affected in refactoring. 
+* Added option to specify number of spatial scales
+* Changed output of autoscale: scaling factor is no longer part of the list of classification images that is returned
+* Bugfix: When using pre 0.3.0 Rdata file, the paramater matrix will now be truncated to the appropriate numbers of parameters
+
 Changes from 0.3.2-37 to 0.3.2.1-39 [8-Oct-2015]
 
 * Bugfix: NA's in by parameter of batchGenerateCI2IFC() get ignored instead of making R crash. Thank you Elze Ufkes for reporting this bug!
